<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/EN"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/EN" />
        <item
            android:id="@+id/SP"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/SP" />
        <item
            android:id="@+id/IT"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/IT" />
        <item
            android:id="@+id/FR"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/FR" />

        <item
            android:id="@+id/GR"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/GR" />

        <item
            android:id="@+id/EG"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/EG" />

        <item
            android:id="@+id/SA"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/SA" />

        <item
            android:id="@+id/AE"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/AE" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
